# danvas

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  GUIDE.md  LICENSE  MANIFEST.in  PROTOCOL.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  cad.py  pyproject.toml  setup.py
.github/workflows/: broker.yml  ci.yml  pypi.yml
broker/: .gitignore  Cargo.toml
broker/examples/: rust_canvas.rs
broker/src/: lib.rs  main.rs
danvas/: __init__.py  _dialin.py  _events.py  _factories.py  _flags.py  _hotreload_monitor.py  _layout.py  _ledger.py  _livepatch.py  _net.py  _onedit.py  _procown.py  _protocol.py  _trace.py  arrow.py  autopanel.py  bake.py  bridge.py  canvas.py  canvas.pyi  dispatch.py  hotreload.py  kernel.py  merge.py  remote.py  serial.py  server.py  shapes.py  source.py  tunnel.py
danvas-node/: README.md  conformance_target.js  example.js  index.js  package.json
danvas-rust/: Cargo.toml  build.rs
danvas-rust/examples/: canvas_state.rs  catalogue.rs  conformance_target.rs  embedded.rs  interact.rs  media.rs  rust_frame.b64  shapes.rs  two_languages.rs
danvas-rust/src/: helpers.rs  lib.rs  serve.rs
danvas-source/: Cargo.toml
danvas-source/examples/: canvas_state.rs  catalogue.rs  conformance_target.rs  interact.rs  media.rs  shapes.rs  two_languages.rs
danvas-source/examples/assets/: histogram_fig.json  image_src.txt  liveplot_fig.json
danvas-source/src/: helpers.rs  lib.rs  serve.rs
danvas/components/: __init__.py  _doc.py  _jsx.py  _routing.py  audio.py  base.py  button.py  chat.py  custom.py  download.py  filebrowser.py  heatmap.py  histogram.py  image.py  inspector.py  label.py  liveplot.py  markdown.py  model3d.py  plot.py  react.py  repl.py  slider.py  table.py  textfield.py  toggle.py  upload.py  video.py  volume3d.py  webview.py
danvas/components/jsx/: audio.jsx  button.jsx  chat.jsx  download.jsx  file_browser.jsx  image.jsx  inspector.jsx  label.jsx  live_plot.jsx  markdown.jsx  plot.jsx  slider.jsx  table.jsx  text_field.jsx  toggle.jsx  upload.jsx  video.jsx  webview.jsx
danvas/frontend/: PLAN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
danvas/frontend/scripts/: _as.mjs  _cullcheck.mjs  _elbow.mjs  _keepcheck.mjs  _shot.mjs  _v.mjs  precompress.mjs  verify-e2e.mjs
danvas/frontend/src/: App.jsx  App.tsx  MonacoRepl.jsx  ReactHost.jsx  bridge.js  bridge.ts  canvas.jsx  index.css  main.tsx  protocol.generated.js  shims.d.ts  surface.js  theme.css
danvas/frontend/src/engine/: camera.ts  contextmenu.ts  editor.ts  export.ts  gesture.ts  hittest.ts  input.ts  interaction.ts  lineGeo.ts  selection.ts  store.ts  types.ts
danvas/frontend/src/react/: Card.tsx  ContextMenu.tsx  CustomView.tsx  DrawingLayer.tsx  EngineContext.tsx  PanelLayer.tsx  ReactHost.tsx  SelectionOverlay.tsx  StylePanel.tsx  TextEditor.tsx  Toolbar.tsx  boardcolors.ts  customShim.ts  frame.ts  freehand.ts  icons.tsx  measure.ts  overlays.tsx  palette.ts  panels.tsx  richtext.ts  theme.ts  uistate.ts
danvas/templates/: components.json
docs/: broker-plan.md  polyglot-plan.md  sdk-authoring.md
examples/: action_routing.py  analog_clock.py  architecture.py  audio_input_test.py  bake_app.py  binary_input_test.py  catalogue.py  chat_room.py  container_layout.py  custom_binary_stream.py  custom_component.py  custom_html.py  custom_styled_component.py  dispatch_trace_demo.py  download_button.py  file_browser.py  file_endpoints.py  fixed_view.py  frontend_backend_tour.py  hackathon.py  hackathon_data.json  hello_world.py  layering.py  leaderboard.py  load_canvas.py  locked_and_arrows.py  managed_shapes.py  matplotlib_panel.py  merge_canvases.ipynb  merge_hub.py  moving_widget.py  notebook_autopanel.ipynb  notebook_dynamic.ipynb  page_layout.py  plotly_panel.py  public_tunnel.py  react_canvas_api.py  react_component.py  react_request.py  react_styled_component.py  (+17 more)
examples/arduino_serial/: arduino_serial.ino
examples/hackathon/: hackathon.py
examples/hackathon/panels/: StockChip.jsx  admin.css  announce.css  announce.jsx  board.css  board.jsx  leaderboard.css  leaderboard.jsx  orders.css  orders.jsx  shared.css  stock.jsx  team.css  team.jsx  teams.jsx
pycanvas/: __init__.py  _factories.py  _flags.py  _hotreload_monitor.py  _layout.py  _protocol.py  arrow.py  autopanel.py  bake.py  bridge.py  canvas.py  canvas.pyi  dispatch.py  hotreload.py  kernel.py  merge.py  server.py  shapes.py  tunnel.py
pycanvas/components/: __init__.py  _doc.py  _routing.py  _theme.py  audio.py  base.py  button.py  chat.py  custom.py  download.py  filebrowser.py  image.py  inspector.py  label.py  liveplot.py  markdown.py  plot.py  react.py  repl.py  slider.py  table.py  textfield.py  toggle.py  upload.py  video.py  webview.py
pycanvas/frontend/: index.html  package-lock.json  package.json  vite.config.js
pycanvas/frontend/src/: App.jsx  MonacoRepl.jsx  ReactHost.jsx  bridge.js  canvas.jsx  main.jsx  protocol.generated.js  theme.css
scripts/: bench_wire.py  gen_all.py  gen_component_templates.py  gen_protocol.py
tests/: benchmark_hub.py  sdk_conformance_target.py  test_api_freeze.py  test_api_manners.py  test_async_handlers.py  test_audio.py  test_bake.py  test_bridge.py  test_broker_replay.py  test_broker_taps.py  test_button.py  test_component_contracts.py  test_component_roles.py  test_component_templates.py  test_conformance.py  test_cross_process_names.py  test_cursors.py  test_custom.py  test_custom_binary.py  test_describe.py  test_dialin.py  test_dispatch.py  test_dispatch_trace.py  test_download.py  test_emit.py  test_endpoints.py  test_factories.py  test_flag_behavior_e2e.py  test_frontend_smoke.py  test_handlers_introspection.py  test_histogram.py  test_hosting.py  test_hotreload_watch.py  test_insert.py  test_inspect_endpoints.py  test_inspector_show_field.py  test_layout.py  test_ledger.py  test_light_install.py  test_live_properties.py  (+46 more)
training_dashboard/: train_dashboard.py
