[project]
name = "pycanvas"
version = "0.1.0"
description = "A browser-based spatial canvas with UI panels defined and controlled from Python."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Daniel Chahine", email = "daniel.chahine004@gmail.com" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    "numpy>=1.24",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
# Public-internet hosting (Canvas.serve(tunnel=True)). pycloudflared downloads
# and caches the cloudflared binary on first use, so no manual install is needed.
# Optional: tunnelling also works with a system-installed cloudflared/localtunnel.
tunnel = ["pycloudflared>=0.2"]
# Server-side JPEG encoding for VideoFeed (Canvas.video with the default
# encode=True). OpenCV is large (~90 MB), so it's optional: a canvas with only
# sliders/plots/etc. doesn't pay for it, and VideoFeed(encode=False) streams
# pre-encoded JPEG bytes (e.g. from a hardware encoder) without OpenCV at all.
video = ["opencv-python>=4.8"]
# Microphone capture for AudioFeed examples (Canvas.audio). The AudioFeed
# component itself needs nothing extra — only *capturing* mic input does. The
# browser plays the streamed PCM through the Web Audio API.
audio = ["sounddevice>=0.4"]
# Packaging a canvas into a standalone desktop app (Canvas.bake / python -m
# pycanvas.bake). pywebview shows the canvas in a native window; PyInstaller
# bundles everything into a self-contained executable.
desktop = ["pywebview>=4", "pyinstaller>=6"]

[project.urls]
Homepage = "https://github.com/DanielChahine004/pycanvas"
Repository = "https://github.com/DanielChahine004/pycanvas"