[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["danvas*"]

# The built frontend (danvas/frontend/dist: the JS/CSS/font bundle tldraw and
# the panels are served from) is data, not Python, so packages.find won't pick
# it up. Without this it's dropped from the wheel and a pip-installed canvas
# serves a blank page (index.html with 404s for /assets/*). Ship the whole dist.
[tool.setuptools.package-data]
danvas = ["frontend/dist/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "danvas"
version = "0.1.0"
description = "A browser-based spatial canvas with UI panels defined and controlled from Python."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
# danvas's own code is AGPL; the bundled frontend (danvas/frontend/dist) is
# third-party code under its own licences — see THIRD_PARTY_LICENSES.md. Both
# files ship in the wheel + sdist so the tldraw/watermark obligation travels
# with the package.
license-files = ["LICENSE", "THIRD_PARTY_LICENSES.md"]
authors = [{ name = "Daniel Chahine", email = "daniel.chahine004@gmail.com" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
    # ~10x faster JSON encoding for the wire than stdlib json (the dominant
    # per-broadcast cost on the single event-loop thread). Ships prebuilt wheels
    # for every common platform; danvas/bridge.py falls back to stdlib json
    # transparently if it's ever unavailable, so it's a free speedup, not a hard
    # requirement.
    "orjson>=3.9",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
# Public-internet hosting (Canvas.serve(tunnel=True)). pycloudflared downloads
# and caches the cloudflared binary on first use, so no manual install is needed.
# Optional: tunnelling also works with a system-installed cloudflared/localtunnel.
tunnel = ["pycloudflared>=0.2"]
# Server-side JPEG encoding for VideoFeed (Canvas.video with the default
# encode=True). OpenCV is large (~90 MB), so it's optional: a canvas with only
# sliders/plots/etc. doesn't pay for it, and VideoFeed(encode=False) streams
# pre-encoded JPEG bytes (e.g. from a hardware encoder) without OpenCV at all.
video = ["opencv-python>=4.8"]
# Audio streaming for AudioFeed (Canvas.audio). NumPy converts float/array PCM
# chunks to int16 (callers passing raw int16 bytes don't even need it, but the
# common sounddevice path does); sounddevice captures the microphone in the
# examples. The browser plays the streamed PCM through the Web Audio API.
audio = ["numpy>=1.24", "sounddevice>=0.4"]
# Packaging a canvas into a standalone desktop app (Canvas.bake / python -m
# danvas.bake). pywebview shows the canvas in a native window; PyInstaller
# bundles everything into a self-contained executable.
desktop = ["pywebview>=4", "pyinstaller>=6"]

[project.urls]
Homepage = "https://github.com/DanielChahine004/danvas"
Repository = "https://github.com/DanielChahine004/danvas"