[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["danvas*"]

# The built frontend (danvas/frontend/dist: the JS/CSS/font bundle the Preact
# canvas and the panels are served from) is data, not Python, so packages.find
# won't pick it up. Without this it's dropped from the wheel and a pip-installed
# canvas serves a blank page (index.html with 404s for /assets/*). Ship the whole dist.
[tool.setuptools.package-data]
# The built frontend bundle, plus the typing marker (PEP 561) and the .pyi stub
# so type checkers pick up danvas's types when it's pip-installed.
danvas = ["frontend/dist/**/*", "templates/*.json", "components/jsx/*.jsx", "py.typed", "*.pyi", "_bin/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "danvas"
version = "0.6.4"
description = "A browser-based spatial canvas with UI panels defined and controlled from Python."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
# danvas's own code is AGPL; the bundled frontend (danvas/frontend/dist) is
# third-party code under its own (permissive, MIT) licences — see
# THIRD_PARTY_LICENSES.md. Both files ship in the wheel + sdist so those notices
# travel with the package.
license-files = ["LICENSE", "THIRD_PARTY_LICENSES.md"]
authors = [{ name = "Daniel Chahine", email = "daniel.chahine004@gmail.com" }]
# Minimal by design: serving is the danvasd binary (bundled in platform wheels),
# and both serve() and danvas.connect() dial in over the websockets *client*, so
# the base install carries no server stack. The FastAPI/uvicorn hub is optional
# (danvas[hub]) — needed only to run the Python reference hub `python -m
# danvas.merge`, not to serve or connect to a canvas.
dependencies = [
    "websockets>=12",
    # ~10x faster JSON encoding for the wire than stdlib json (the dominant
    # per-broadcast cost). Ships prebuilt wheels for every common platform;
    # danvas/bridge.py falls back to stdlib json transparently if it's ever
    # unavailable, so it's a free speedup, not a hard requirement.
    "orjson>=3.9",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: User Interfaces",
    "Typing :: Typed",
]

[project.optional-dependencies]
# The Python reference hub: `python -m danvas.merge` (a neutral, compute-less
# aggregator) runs on FastAPI/uvicorn. Not needed to serve a canvas (that's the
# danvasd binary) or to connect to one — only to run the Python hub itself.
hub = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
# Public-internet hosting (Canvas.serve(tunnel=True)). pycloudflared downloads
# and caches the cloudflared binary on first use, so no manual install is needed.
# Optional: tunnelling also works with a system-installed cloudflared/localtunnel.
tunnel = ["pycloudflared>=0.2"]
# Server-side JPEG encoding for VideoFeed (Canvas.video with the default
# encode=True). OpenCV is large (~90 MB), so it's optional: a canvas with only
# sliders/plots/etc. doesn't pay for it, and VideoFeed(encode=False) streams
# pre-encoded JPEG bytes (e.g. from a hardware encoder) without OpenCV at all.
video = ["opencv-python>=4.8"]
# Audio streaming for AudioFeed (Canvas.audio). NumPy converts float/array PCM
# chunks to int16 (callers passing raw int16 bytes don't even need it, but the
# common sounddevice path does); sounddevice captures the microphone in the
# examples. The browser plays the streamed PCM through the Web Audio API.
audio = ["numpy>=1.24", "sounddevice>=0.4"]

# `python -m danvas.serial COM3`: bridge a wired (UART/USB-serial) device
# onto a canvas as a dial-in source.
serial = ["pyserial>=3.5"]
# Packaging a canvas into a standalone desktop app (Canvas.bake / python -m
# danvas.bake). pywebview shows the canvas in a native window; PyInstaller
# bundles everything into a self-contained executable.
desktop = ["pywebview>=4", "pyinstaller>=6"]

[project.urls]
Homepage = "https://github.com/DanielChahine004/danvas"
Repository = "https://github.com/DanielChahine004/danvas"