[package]
name = "danvas-source"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for danvas: dial into a canvas as a source and drive native panels (the transliteration of danvas/source.py; PROTOCOL.md is the contract)"
license = "AGPL-3.0-or-later"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde_json = "1"

[[example]]
name = "two_languages"
path = "examples/two_languages.rs"
